--- a/_config.yml
+++ b/_config.yml
@@ -21,9 +21,9 @@ title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     :  # "your name"
 description              : 무서운 웹사이트 # "An amazing website."
-url                      : https://mins0711.github.io #the base hosthome& protocol for your site e.g. "https://mmistakes.github.io"
+url                      : "https://mins0711.github.io" #the base hosthome& protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
-repository               :https://mins0711.github.io # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
+repository               : "https://mins0711.github.io" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
