--- a/_config.yml
+++ b/_config.yml
@@ -105,7 +105,7 @@ analytics:
 # Site Author
 author:
   name             : "정민찬" #"Your Name"
-  avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  avatar           : "/assets/images/bio-photo.jpg" # path of avatar image, e.g. 
   bio              : "무서운 웹사이트"# "I am an **amazing** person."
   location         : "Republic of korea"# "Somewhere"
   email            :
