--- a/_config.yml
+++ b/_config.yml
@@ -106,7 +106,7 @@ analytics:
 author:
   name             : "정민찬" #"Your Name"
   avatar           : "/assets/images/아르갈리아.png" # path of avatar image, e.g. 
-  bio              : "무서운 웹사이트"# "I am an **amazing** person."
+  bio              : "잔향악단"# "I am an **amazing** person."
   location         : "Republic of korea"# "Somewhere"
   email            :
   links:
