--- a/_config.yml
+++ b/_config.yml
@@ -104,7 +104,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "정민찬" #"Your Name"
+  name             : "푸른잔향" #"Your Name"
   avatar           : "/assets/images/아르갈리아.png" # path of avatar image, e.g. 
   bio              : "잔향악단"# "I am an **amazing** person."
   location         : "Republic of korea"# "Somewhere"
